--- a/mean_filter_scikit.ipynb
+++ b/mean_filter_scikit.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLcFWNqyiDPcXP3OaHNwzY",
+      "mount_file_id": "1K61cG7rhJYJOFRBF7zYAfoUP6rmTU2-t",
+      "authorship_tag": "ABX9TyOsXx4owS1y/VEJl4v90p1W",
       "include_colab_link": true
     },
     "kernelspec": {
